src/testData/analysis/globalMatchData/zeroInIndex_1_0.cr
# LANGUAGE_LEVEL: 1.0

$0
$0?
$1
$1?
$01
$01?
$012
$012?
$10
<error descr="Global match index with zero at second position is invalid in pre-1.7">$10?</error>
<error descr="Global match index with zero at second position is invalid in pre-1.7">$102</error>
<error descr="Global match index with zero at second position is invalid in pre-1.7">$102?</error>